--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "bitstarter",
+  "name": "node-js-sample",
   "version": "0.0.2",
   "description": "a sample node.js app for heroku",
   "main": "web.js",
@@ -15,7 +15,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/andres18281/bitstarter"
+    "url": "https://github.com/heroku/node-js-sample"
   },
   "keywords": [
     "node",
