--- a/package.json
+++ b/package.json
@@ -1,27 +1,27 @@
 {
- "name": "bitstarter",
- "version": "0.0.2",
- "description":"un simple node.js",
- "main":"web.js",
- "scripts":{
-	"test": "echo \"error: no test specified\" && exit `"
- },
- "dependences": {
-  "express": "~3.3.4"
-   },
-  "engines":{
-   "node": "0.10.13",
-    "npm":"1.3.2"
-    },
-   "repository":{
+  "name": "bitstarter",
+  "version": "0.0.2",
+  "description": "a sample node.js app for heroku",
+  "main": "web.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "dependencies": {
+    "express": "~3.3.4"
+  },
+  "engines": {
+    "node": "0.10.13",
+    "npm": "1.3.2"
+  },
+  "repository": {
     "type": "git",
-    "url": "https:github.com/andres18281/bitstarter"
-    },
-    "keywords": [
-     "node",
-     "heroku"
-     ],
-     "author": "c andrews",
-     "license": "BSD",
-     "githead":"001"
-     }
+    "url": "https://github.com/andres18281/bitstarter"
+  },
+  "keywords": [
+    "node",
+    "heroku"
+  ],
+  "author": "Mark Pundsack",
+  "license": "BSD",
+  "gitHead": "90fd58e343c29e54fc1d4e19036595500b2bdc21"
+}
